@@ -1,55 +1,30 @@
-# snapPERL v0.3.0-beta (Dev Branch)
+# snapPERL v0.3.0
 
-##http://snapperl.stevemiles.me.uk
+#####Helper script for snapraid created in PERL
+
+ Snapraid wrapper script written in PERL. Enables automation using cron for your Array Syncs
+
+ Runs sync commands and verifys data using scrub command. Sends alerts when are issues found
+ and aborts where needed. Tested with snapraid v10.0
+
+## Website: http://snapperl.stevemiles.me.uk
+
+### Linux Compatible
+#### Tested on Ubuntu 16.04LTS
 
 ### Windows Compatible
 #### Tested on Windows 10 - Snapraid x64 v10.0 and Latest ActivePerl 
-
-Helper script for snapraid created in PERL
-
- Snapraid helper script written in PERL. Enables automation using cron for your Array Syncs
-
- Runs sync commands and verifys data using scrub command. Sends alerts when are issues found
- and aborts where needed. Tested with snapraid 10.0
  
 #####Script is expected to be run as root so calls snapraid as root
 
- 1.  Parses the $options scalar and builds %opt hash from this. These options are used
-     thoughout the script. Built this was to make the option more human readable.
+#### _Please Read!_
 
- 2.  Parses the snapraid config file and puts the options into the %conf hash.
+CHANGELOG
+INSTALL.md
+INSTALL-WINDOWS.md
+LICENSE
 
- 3.  Runs snapraid status and checks for reported errors. If there is a sync in progress.
-     Number of days since last scrub and finaly any sub-second timestamps. It will correct
-     timestamp issues before moving on. Snapraid verion is logged.
-
- 4.  Runs snapraid diff and puts all counts into %diff hash. Aborts if data not parsed.
-     Sets diff{sync} if sync is required.
-
- 5.  If diff shows sync need and changed/deleted files do not exceed limits set in $options
-     a snapraid sync is run. If set the data if verified using the '-p new' option from
-     snapraid 9.0 on. Script will abort if snapraid does not confirm Everything Ok!
-
- 6.  If needed array is scrubbed using settings from $options. Scrub will not run unless a
-     successfull sync has run. Scrub if run when age of newest scrubbed block exceeds limit
-     set uing 'scrubDays' option of $options. If '-p new' option of snapraid 9.0+ is used then
-     the check will be against the oldest scrub block against 'scrubOldest'
-
- 7.  If active in $options snapraid pool command is run. This will be checked against valid
-     option for snapraid conf file before running.
-
- 8.  If active in $options snapraid smart is run and details parsed from output and logged
-     warning will be sent based on Fail Percentage / Temp and Errors set in $options.
-
- 9.  If active in $options snapraid down is run and array is spun down. Details are logged.
-
- 10. Log file wrote to disk and any warnings/errors are sent out via email. This subrutine is 
-     also called if the script aborts so messages are sent and log saved. $option 'logStdout'
-     will also send the log to the screen as the script runs. Useful for debugging. Turn of
-     off when run via a cron job. (Debug info sent to log if 'logLevel >= 5')
-
- 11. Runs custom commands before and after script runs from custom-cmds file. See example for syntax
-
+_And the extensive comments for the options in: snapPERL.conf.example_
 
 
 #Created by Steve Miles (SmileyMan). 
@@ -62,8 +37,6 @@ Inspired by bash script http://zackreed.me/articles/83-updated-snapraid-sync-scr
 Which in turn was a modified version of https://gist.github.com/bfg100k/87a1bbccf4f15d963ff7 
 - Sidney Chong first created in 2011
 
-Why PERL. Perl is cleaner. More powerfull and I can use HASH'es. Been over 10 years since
-I worked with PERL and now remember why I loved it. Did not get on with BASH syntax!
 
 #Work in Progress.
 
@@ -74,6 +47,25 @@ and only ever calls snapraid (diff/status/sync/scrub/smart/down) so data should 
 ####Script passes Perl::Critic - Severity: Stern
 
 ###__This script does not write or manipulate and Array Data. It is a wrapper for snapraid http://www.snapraid.it/__
+
+#### Command Line Options
+##### Only for overrides set all permanent options in snapPERL.conf
+
+    snapPERL.pl [ -c  --conf CONFIG         { Full path to conf file        } ]
+                [ -x  --custom-cmds FILE    { Full path to custom-cmds file } ]
+                [ -m  --message-level 1-3   { Set message level             } ]
+                [ -l  --log-level 1-5       { Set log level                 } ]
+                [ --stdout    --nostdout    { Toggle log to stdout          } ]
+                [ --check     --nocheck     { Toggle check option enable    } ]
+                [ --scrub     --noscrub     { Toggle scrub option enable    } ]
+                [ --email     --noemail     { Toggle email send             } ]
+                [ --custom    --nocustom    { Toggle custom cmds            } ]
+                [ --pushover  --nopushover  { Toggle Pushover send          } ]
+                [ --smart     --nosmart     { Toggle smart logging          } ]
+                [ --pool      --nopool      { Toggle snapraid pool          } ]
+                [ --spindown  --nospindown  { Toggle spindown disks         } ]
+                [ -h  --Help                { This Help                     } ]
+                [ -v  --version             { Display Version               } ]
 
 #Disclaimer
 
